syntax = "proto3";
package murdermystery;

option go_package = ".;pb";

message Handshake {
  enum Error {
    UNKNOWN = 0;
    OK = 1;
    STARTED = 2;
  }
  Error err = 1;
}

message Host { bool isHost = 1; }

message SetName { string name = 1; }

message StartGame {}

message Players {
  message Player {
    string name = 1;
    int32 id = 2;
  }

  repeated Player players = 1;
  int32 host_id = 2;
}

message Error {
  enum E_type {
    UNKNOWN = 0;
    DISCONNECT = 1;
    BADNAME = 2;
  }
  E_type msg = 1;
}

message Alert {
  enum Msg {
    UNKNOWN = 0;
    NEEDMOREPLAYERS = 1;
  }
  Msg msg = 1;
}

message SetCharacter {
  enum Character {
    NONE = 0;
    CITIZEN = 1;
    WEREWOLF = 2;
    HEALER = 3;
    PROPHET = 4;
    HUNTER = 5;
  }

  Character character = 1;
}

message FellowWolves { repeated int32 ids = 1; }
